--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "server": "nodemon index.js",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "migrate": "knex migrate:latest",
@@ -22,8 +23,11 @@
   "dependencies": {
     "@vscode/sqlite3": "^5.0.8",
     "bcryptjs": "^2.4.3",
+    "connect-session": "^0.0.1",
+    "connect-session-knex": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "knex": "^2.0.0",
     "sqlite3": "^5.0.5"
